SynProdGITV1/force-app/main/default/objects/ContentVersion/fields/Case_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_File_Type__c</fullName>
    <description>File type used on cases</description>
    <label>File Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>