SynProdGITV1/force-app/main/default/objects/ContentVersion/fields/Content_Version_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_External_Id__c</fullName>
    <description>External Id used data migration</description>
    <externalId>true</externalId>
    <label>Content Version External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>