SynProdGITV1/force-app/main/default/objects/ContentVersion/fields/Is_Signature__c.field-meta.xml
<CustomField>
    <fullName>Is_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signature?</label>
    <type>Checkbox</type>
</CustomField>